force-app/main/default/objects/Opportunity_Site__c/Opportunity_Site__c.object-meta.xml
<CustomObject>
    <label>Opportunity Site</label>
    <nameField>
        <label>Opportunity Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>