force-app/main/default/objects/Opportunity_Site__c/fields/Audio_Type_s_Required__c.field-meta.xml
<CustomField>
    <fullName>Audio_Type_s_Required__c</fullName>
    <label>Audio Type(s) Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Headset Audio</fullName>
            </value>
            <value>
                <fullName>Microphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>