force-app/main/default/objects/Opportunity_Site__c/fields/Deployment_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Complexity__c</fullName>
    <label>Deployment Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>