force-app/main/default/objects/Opportunity_Site__c/fields/Equipment_To_Install__c.field-meta.xml
<CustomField>
    <fullName>Equipment_To_Install__c</fullName>
    <label>Equipment To Install</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>