force-app/main/default/objects/Opportunity_Site__c/fields/Install_Approach__c.field-meta.xml
<CustomField>
    <fullName>Install_Approach__c</fullName>
    <label>Install Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>