force-app/main/default/objects/Opportunity_Site__c/fields/Need_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_By_Date__c</fullName>
    <label>Need By Date</label>
    <type>Date</type>
</CustomField>