force-app/main/default/objects/Opportunity_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Opportunity Sites</relationshipLabel>
    <relationshipName>Opportunity_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>